# mag

./: CMakeLists.txt  Makefile  README.md  cylph  cylph.py  data.py  draw.py  drawMatrix.py  drawSingle.py  gam-convert.py  print-bins.py  res.C  solve.py
cmake/: BuildFlags.cmake
docs/: README.md
src/: CMakeLists.txt  Markov.cxx  Markov.h  Material.cxx  Material.h  OptArguments.cxx  OptArguments.h  Optimiser.cxx  Optimiser.h  SDEF.cxx  SDEF.h  Solver.cxx  Solver.h  SolverArguments.cxx  SolverArguments.h  Source.cxx  Source.h  Test.cxx  Test.h  functions.cxx  functions.h  gam.cxx  optimise.cxx  solve.cxx
src/cuda/: CMakeLists.txt  kernel.cxx  kernel.h
test/: CMakeLists.txt  Readme.md  mctal  test.pstudy  test.sh
test-mcnp/: draw.C
test/bins/: CMakeLists.txt  Makefile  draw.C  mctal.template  test.sh
test/cuda/: CMakeLists.txt  test.cu
test/cuda/cusparse/: CMakeLists.txt  cusparse_test.cu
test/cuda/matrix/: CMakeLists.txt  dev_array.h  kernel.cu  kernel.h  matrixmul.cu
test/cuda/particle/: CMakeLists.txt
test/mcnp/: draw.C
test/solver/: CMakeLists.txt  draw.C  tests.C  tests.wxm
test/ut/: SolverArguments.test.cpp
